--- a/mr-tryout/pom.xml
+++ b/mr-tryout/pom.xml
@@ -69,7 +69,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer imHftpFileSystemplementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>wc.Driver</mainClass>
                                 </transformer>
                             </transformers>
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>2.7.3</version>
+            <version>3.2.1</version>
         </dependency>
     </dependencies>
 
